syntax = "proto3";

option csharp_namespace = "GrpcCustomersService";

package customer;

service CustomerService {
	rpc GetAll (Empty) returns (CustomerList) {}
	rpc Get (Id) returns (Customer) {}
	rpc Insert (Customer) returns (Empty) {}
	rpc Update (Customer) returns (Customer) {}
	rpc Delete (Id) returns (Empty) {}
}

message Empty {}

message Customer {
	int32 id = 1;
	string name = 2;
	string address = 3;
	string birthdate = 4;
}

message CustomerList {
	repeated Customer item = 1;
}

message Id {
	int32 id = 1;
}